html frontend update,add register and login